--- a/public/src/styles/footer.scss
+++ b/public/src/styles/footer.scss
@@ -180,6 +180,26 @@
   margin: 30px 0;
 }
 
+/* Social links for the footer */
+.social-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 80px; /* Much wider spacing between social media icons */
+  margin: 30px 0 10px;
+}
+
+.social-link {
+  font-size: 24px;
+  color: $white;
+  opacity: 0.9;
+  transition: opacity 0.2s ease;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
 .social-icon {
   width: 45px;
   height: 45px;
@@ -201,8 +221,21 @@
 }
 
 .copyright {
-  font-size: 12px;
-  opacity: 0.7;
+  font-size: 14px;
+  opacity: 1;
   margin-top: 30px;
+  font-family: $font-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: $white;
+}
+
+.website-credit {
+  font-size: 11px;
+  opacity: 0.5;
+  margin-top: 15px;
   font-family: $font-sans;
+  color: #cccccc;
+  font-weight: 400;
 }
