--- a/public/src/styles/footer.scss
+++ b/public/src/styles/footer.scss
@@ -27,7 +27,7 @@
   align-items: center;
   color: $white;
   text-align: center;
-  padding: 20px;
+  padding: 0;
   box-shadow: $shadow-medium;
   transition: $transition;
   position: relative;
